# qml_puzzle

./: CMakeLists.txt  README  version.h.in
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  qml.qrc
src/client/ui/controller/: GameController.cpp  GameController.h
src/client/ui/model/: GameBoard.cpp  GameBoard.h
src/client/ui/qml/: main.qml
src/client/ui/qml/entity/: GameBoard.qml  Tile.qml
src/core/: CMakeLists.txt  Core.cpp  Core.h
src/gtest/: CMakeLists.txt
src/gtest/cmake/: AddGMock.cmake  AddGTest.cmake
src/gtest/unit_tests/: CMakeLists.txt
src/gtest/unit_tests/src/: main.cpp
src/server/: CMakeLists.txt  Server.cpp  Server.h
